force-app/main/default/objects/FattureInCloudSettings__c/FattureInCloudSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Informazioni per accesso a Fatture in Cloud via REST API.</description>
    <label>Fatture In Cloud Settings</label>
</CustomObject>