force-app/main/default/objects/FattureInCloudSettings__c/fields/AdministrationEmail__c.field-meta.xml
<CustomField>
    <fullName>AdministrationEmail__c</fullName>
    <label>Administration Email</label>
    <type>Email</type>
</CustomField>