force-app/main/default/objects/FattureInCloudSettings__c/fields/amministrazioneEmail__c.field-meta.xml
<CustomField>
    <fullName>amministrazioneEmail__c</fullName>
    <label>amministrazioneEmail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>