force-app/main/default/objects/FattureInCloudSettings__c/fields/api_base_url__c.field-meta.xml
<CustomField>
    <fullName>api_base_url__c</fullName>
    <label>api_base_url</label>
    <length>200</length>
    <type>Text</type>
</CustomField>