force-app/main/default/objects/FattureInCloudSettings__c/fields/api_key__c.field-meta.xml
<CustomField>
    <fullName>api_key__c</fullName>
    <label>api_key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>