force-app/main/default/objects/FattureInCloudSettings__c/fields/api_uid__c.field-meta.xml
<CustomField>
    <fullName>api_uid__c</fullName>
    <label>api_uid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>