force-app/main/default/objects/FattureInCloudSettings__c/fields/InvoiceStage__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStage__c</fullName>
    <label>Invoice Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>