force-app/main/default/objects/FattureInCloudSettings__c/fields/monthNumber__c.field-meta.xml
<CustomField>
    <fullName>monthNumber__c</fullName>
    <label>monthNumber</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>