force-app/main/default/objects/FattureInCloudSettings__c/fields/StatoFattura__c.field-meta.xml
<CustomField>
    <fullName>StatoFattura__c</fullName>
    <label>StatoFattura</label>
    <length>50</length>
    <type>Text</type>
</CustomField>